@@ -1,2 +1,3 @@
 DIST leim-1.33-pkg.tar.gz 1804772 SHA256 d64a7758c08b882b764a3ea055f1d3ccf5aa48500fd84be70ca455eccb88725d SHA512 c4bea375b780ed39fac250f81692a987bc72bba3856ad429d1f8d6be7c3ce457a34621d43e2abc9169f6e74f73674dbb95e724fabf26ce6a1b0ef73de9eb4fa5 WHIRLPOOL 1ef10c0c89800bae7908a41f8675f0aa034554079957974c30de4e8e0f253fa9b5bb2e132a7fd0adbf692205cb1c6b2783ea5c2e44ea9063ad840af3e7a6fbca
 DIST leim-1.34-pkg.tar.gz 1811136 SHA256 1c93f41f9e5f443d9377e34da19732d85e7eb758f569b0a155d1304c76bb17f8 SHA512 c6426544c51c8ad4a500337e391e913bb6e6ac2c39f5d9636fc5d832a4dbe61a0ca0a20abf1d28a8691a1b6323946e23237b699c01208137e4c489a0c2ef03bb WHIRLPOOL 6cdae6b66a4d4f12193f45f553665e4829b25f2c35c1242d475936991b1254361a32ca6e7b12d2dc2e93cea42a4f871eaffdf5aedac8a0d9bd97295d75961ce2
+DIST leim-1.36-pkg.tar.gz 1817724 SHA256 9ca3926ae9550452434d59b3b53d9c8053e96b695f19299bc89d83e7cbb7edbc SHA512 82f5756116a66ab08ce4fe8ddd2542f792d6a3f4d2a879181573c43f53642bbbddfa3ae6e6b4b2553138b143e90685b9d7b7b6c6782017fe47c49b07b32cbbd8 WHIRLPOOL 0f14eb561a9c770e7b2f179025a0d5dbcbf9aa0ce0aa9b6ee72c76f62a929b2da60b5f8b2d355d432ec65df2b3f9549dd34b1eb7ac83412746bf4381857584e7
